--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "ngx-translate": "0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "twilio": "^4.17.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
